# device_agent

./: .gitignore  CONFIGURATION.md  Cargo.toml  README.md  config.example.toml
backend/: .env.example  requirements.txt
backend/agents/: admin.py  authentication.py  models.py  urls.py  views.py
backend/agents/migrations/: 0001_initial.py
backend/api/: broadcast.py  consumers.py  middleware.py  routing.py  urls.py  views.py
backend/config/: asgi.py  logging_config.py  settings.py  urls.py
backend/devices/: admin.py  models.py  serializers.py  urls.py  views.py
frontend/: index.html  vite.config.js
frontend/src/: App.vue
frontend/src/assets/css/: main.css
frontend/src/components/dashboard/: StatsCard.vue
frontend/src/components/devices/: DeviceCard.vue
frontend/src/components/layout/: AppLayout.vue  AppSidebar.vue
frontend/src/composables/: useDashboardSocket.js  useDeviceSocket.js
frontend/src/router/: index.js
frontend/src/services/: api.js  deviceService.js  registrationService.js  tokenService.js  websocket.js
frontend/src/stores/: auth.js  devices.js  registrations.js
frontend/src/views/: DashboardView.vue  DeviceDetailView.vue  DevicesView.vue  LoginView.vue  RegistrationsView.vue
install/: readme.md
install/linux/: device-agent.service  install.sh  uninstall.sh
install/macos/: com.deviceagent.plist  install.sh  uninstall.sh
install/windows/: install.ps1  uninstall.ps1
src/: config.rs  crypto.rs  fingerprint.rs  main.rs  models.rs  retry.rs  sender.rs
src/collector/: common.rs  linux.rs  macos.rs  mod.rs  windows.rs
