[package]
name = "device-agent"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Cross-platform device monitoring agent"
license = "MIT"

[dependencies]
# Core functionality
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# System information
sysinfo = "0.30"

# HTTP client
reqwest = { version = "0.11", features = ["blocking", "json"] }

# Configuration
config = "0.14"

# Networking
local-ip-address = "0.6"

# Error handling
thiserror = "1.0"

# Logging (optional, add when needed)
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
# For testing
mockito = "1.2"