[package]
name = "device-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Existing dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
local-ip-address = "0.6"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
ctrlc = "3.4"
once_cell = "1.19"

# ✅ NEW: For better file logging
fern = "0.6"
backoff = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }